# shelllock

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.cfg  tox.ini
.github/workflows/: test_and_deploy.yml
notebooks/: shelllock_notebook.ipynb
notebooks/images/SHERLOCK/modeling/: alltargets.csv  constants.csv  constants_all.csv
notebooks/results/: Questionnaire ostréiculteurs.csv  Target_sequences_full.xlsx  Target_sequences_oyster.xlsx  blast_output_nr.xml
notebooks/results/05072022/: 16s_tox_genes_oyster_genes_0.xml  16s_tox_genes_oyster_genes_1.xml  16s_tox_genes_oyster_genes_2.xml  16s_tox_genes_oyster_genes_3.xml  16s_tox_genes_oyster_genes_4.xml  16s_tox_genes_oyster_genes_5.xml
notebooks/results/06072022/: 16s_variable_region_0.xml  16s_variable_region_1.xml
notebooks/results/SHERLOCK/1st_try_probe_dilution/: SHERLOCK.xlsx  first_sherlock_probe_concentr.xlsx  first_sherlock_probe_concentr_modif.xlsx  sherlock_probe_concentr_2.xlsx  (+2 more)
notebooks/results/new_sequences/: 16s_E.coli_1.xml  G_07.xml  G_09.xml  G_10.xml  Guide_16s03.xml  Guide_16s04.xml  Guide_Hsp70.xml  Guide_IL17.xml  Guide_RNT_toxR.xml  Guide_SD.xml  Guide_VAM.xml  Tigriopusfulvuscopepods.xml  test.xml  test_2.xml
notebooks/results/paper_test/: Plots of 202209igemallnew2022.09.05_15.53.34_Co.tif  Plots of 202209igemnewguides2022.09.02_16.58.43_Co.tif  Plots of 202209igemtoxr2022.09.02_12.14.02_Co.tif  Plots of 220808igem2022.08.09_16.02.17_Co_(green).tif  Plots of 220808igemthausel2022.08.10_12.31.30_Co.tif  Results.csv  Results_pt3.csv  Results_pt3_2.csv  Resultspt_2.csv  all_new_guides.csv  all_seq.csv  all_seq_2.csv  dilution_temp.csv  new_guides.csv  salinity.csv  salinity_chemical.csv  salinity_chemical_2.csv  salinity_thau_lower.csv  toxR.csv
notebooks/results/vibrio_16s/: results_first_batch0.xml  results_first_batch1.xml  results_first_batch10.xml  results_first_batch11.xml  results_first_batch12.xml  results_first_batch13.xml  results_first_batch14.xml  results_first_batch2.xml  results_first_batch3.xml  results_first_batch4.xml  results_first_batch5.xml  results_first_batch6.xml  results_first_batch7.xml  results_first_batch8.xml  results_first_batch9.xml
notebooks/results/vibrio_target_genes/: results_second_batch0.xml  results_second_batch1.xml  results_second_batch2.xml  results_second_batch3.xml  results_second_batch4.xml  results_second_batch5.xml  results_second_batch_V20.xml  results_second_batch_V21.xml  results_second_batch_V22.xml  results_second_batch_V23.xml  results_second_batch_V24.xml  results_second_batch_V25.xml
notebooks/scripts/: Run BLAST.ipynb  SHERLOCK_all_targets.ipynb  SHERLOCK_ecoli.ipynb  SHERLOCK_modeling.ipynb  SHERLOCK_modeling_figure.ipynb  SHERLOCK_modeling_reaction_rates.ipynb  SHERLOCK_probe_dilution.ipynb  SHERLOCK_probe_dilution_2.ipynb  SHERLOCK_target_concentration.ipynb  quantification_paper_test.ipynb
notebooks/sequences/new_sequences/: corrected.fa
notebooks/sequences/pathogens/: 110722_e_block_guides.fa  16s_V3.fa  16s_tox_genes_oyster_genes.fa  280622_guide_RNA_v2.fa  280622_guide_RNA_v3.fa  First_batch.fa
src/shelllock/: PyCCELL_PRFQT.py  QPTF.py  __init__.py  _shelllock.py
src/shelllock/_tests/: test_module.py
(+29 files in other folders)
