[metadata]
name = shelllock
version = 0.0.1
description = A repository to analyse data
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/NessLfy/shelllock
author = Nessim Louafi
author_email = nessim.louafi@protonmail.com
license = MIT
license_files = LICENSE
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering :: Image Processing
project_urls =
    Bug Tracker = https://github.com/NessLfy/shelllock/issues
    Documentation = https://github.com/NessLfy/shelllock#README.md
    Source Code = https://github.com/NessLfy/shelllock
    User Support = https://github.com/NessLfy/shelllock/issues

[options]
packages = find:
install_requires =
    numpy >=1.23.5 
    scipy >= 1.9.3 
    jupyter
    bumpver
    pandas >= 1.5.1
    seaborn >= 0.12.1
    matplotlib >= 3.6.2

python_requires = >=3.8
include_package_data = True
package_dir =
    =src
# add your package requirements here

[options.packages.find]
where = src

[options.extras_require]
testing =
    tox
    pytest  # https://docs.pytest.org/en/latest/contents.html
    pytest-cov  # https://pytest-cov.readthedocs.io/en/latest/

[options.package_data]
* = *.yaml
